updated anchored links

--- a/anchored links/styles.css
+++ b/anchored links/styles.css
@@ -26,7 +26,7 @@ body {
 
 #sticky {
 	margin: 0 auto;
-	padding: 1em auto;
+	padding: .5em auto;
 	width:100%;
 	position:fixed;
 	background:#eee;
@@ -34,34 +34,25 @@ body {
 	top:0;
 }
 
-#wrapper {
-	width: 100%;
-	padding: 1em 0;
-	background: #fff;
-	padding-top:8em;
-}
-
-#container {
-	margin: 0 auto;
-	padding: 0 auto;
-	width: 100%;
-	max-width: 960px;	
-}
-
-#secondary {
-	padding-top:8em;
-}
-
-#footer {
+header,
+nav,
+#container,
+footer {
 	margin: 0 auto;
 	padding: 0 auto;
 	width:100%;
 	max-width: 960px;
 }
 
-/* Typography
-------------------------------------------*/
+#wrapper {
+	width:100%;
+	background: #fff;
+	padding:1em 0;
+}
 
+section {
+	padding-top:6em;
+}
 
 
 /* Navigation
