--- a/embedded-media/styles.css
+++ b/embedded-media/styles.css
@@ -45,3 +45,26 @@ img {
 .thumb:hover {
 	border: 3px solid orange;
 }
+
+/* Video
+------------------------------------------*/
+
+.video-container {
+	max-width:600px;
+}
+
+.video {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.video iframe,
+.video object,
+.video embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:100%;
+}
