--- a/typography/styles.css
+++ b/typography/styles.css
@@ -7,10 +7,11 @@ Author: Maurice van Cooten
 */
 
 body {
-	background: #eee;
+	background: url("images/handmadepaper.png");
 	font-size: 16px;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	margin:0;
+	color:#58450c;
 }
 
 /* Page structure
@@ -20,14 +21,16 @@ body {
 #wrapper {
 	width:100%;
 	padding:1em 0;
-	background: #fff;
+	background: rgba(250,250,250,0.5);
+
 }
 
 #container {
 	margin: 0 auto;
 	padding: 0 auto;
-	width:100%;
-	max-width: 960px;		
+	width:88%;
+	max-width: 960px;
+
 }
 
 /* Typography
@@ -44,9 +47,17 @@ body {
 	background:url(images/logo.png);
 }
 
-h1{
-	text-shadow: -3px -3px 3px rgba(0,0,0,0.4);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	color:#452a08;
+}
+
+h1 {
+	text-shadow: -3px -3px 3px rgba(0,0,0,0.4);
 }
 
 h2 {
