--- a/typography/styles.css
+++ b/typography/styles.css
@@ -21,8 +21,6 @@ body {
 #wrapper {
 	width:100%;
 	padding:1em 0;
-	background: rgba(250,250,250,0.5);
-
 }
 
 #container {
@@ -30,7 +28,12 @@ body {
 	padding: 0 auto;
 	width:88%;
 	max-width: 960px;
-
+	background: rgba(250,250,250,0.5);
+	box-shadow: 3px 3px 3px rgba(0,0,0,0.3);
+	border-radius: 12px;
+	padding: 1.2em 1em;
+	border-top:1px solid #fff;
+	border-left:1px solid #fff;
 }
 
 /* Typography
@@ -57,15 +60,15 @@ h6 {
 }
 
 h1 {
-	text-shadow: -3px -3px 3px rgba(0,0,0,0.4);
+	text-shadow: 3px 3px 3px rgba(0,0,0,0.3);
 }
 
 h2 {
-	font-weight:100;
+	font-weight:200;
 }
 
 hr {
-	border: 3px dashed crimson;
+	border: 1px dashed crimson;
 
 }
 
