--- a/embedded-media/styles.css
+++ b/embedded-media/styles.css
@@ -13,7 +13,15 @@ body {
 	margin:0;
 }
 
-/* Page structure
+a {
+	color: crimson;
+}
+
+a:hover {
+	color: red;
+}
+
+/* Layout
 ------------------------------------------*/
 
 
@@ -23,10 +31,11 @@ body {
 	background: #fff;
 }
 
-#container {
+header,
+#container,
+footer {
 	margin: 0 auto;
-	padding: 0 auto;
-	width:100%;
+	width:88%;
 	max-width: 960px;		
 }
 
@@ -34,16 +43,8 @@ body {
 ------------------------------------------*/
 
 img {
-	width:100%;
-}
-
-.thumb {
-	max-width:300px;
-	border: 3px solid pink;
-}
-
-.thumb:hover {
-	border: 3px solid orange;
+	max-width:100%;
+	height:auto;
 }
 
 /* Video
