--- a/buttons/styles.css
+++ b/buttons/styles.css
@@ -15,6 +15,7 @@ body {
 
 a {
 	color: crimson;
+	text-decoration:none;
 }
 
 a:hover {
@@ -24,18 +25,17 @@ a:hover {
 /* Layout
 ------------------------------------------*/
 
-#wrapper {
-	width: 100%;
-	padding: 1em 0;
-	background: #fff;
-}
-
 header,
-#container,
+.container,
 footer {
 	margin: 0 auto;
 	width: 88%;
 	max-width: 960px;	
+}
+
+.wrapper {
+	padding: 1em 0;
+	background: #fff;
 }
 
 /* Buttons
