--- a/backgrounds/styles.css
+++ b/backgrounds/styles.css
@@ -14,6 +14,7 @@ body {
 
 a {
 	color: crimson;
+	text-decoration:none;
 }
 
 a:hover {
@@ -24,15 +25,14 @@ a:hover {
 ------------------------------------------*/
 
 header,
-#container,
+.container,
 footer {
 	margin: 0 auto;
 	width:88%;
 	max-width: 960px;
 }
 
-#wrapper {
-	width:100%;
+.wrapper {
 	padding:1em 0;
 }
 
