--- a/lists/styles.css
+++ b/lists/styles.css
@@ -15,23 +15,18 @@ body {
 
 a {
 	color: crimson;
+	text-decoration: none;
 }
 
 a:hover {
-	color: pink;
+	color: red;
 }
 
 /* Layout
 ------------------------------------------*/
 
-#wrapper {
-	width: 100%;
-	padding: 1em 0;
-	background: #fff;
-}
-
 header,
-#container,
+.container,
 footer {
 	margin: 0 auto;
 	width: 88%;
@@ -39,15 +34,15 @@ footer {
 		
 }
 
+.wrapper {
+	padding: 1em 0;
+	background: #fff;
+}
+
 /* Lists
 ------------------------------------------*/
 
 .list--no-bullets {
-	padding:0;
-	list-style:none;
-}
-
-.list--custom-bullets {
 	padding:0;
 	list-style:none;
 }
