--- a/responsive-navigation-dropdown/styles.css
+++ b/responsive-navigation-dropdown/styles.css
@@ -15,6 +15,7 @@ body {
 
 a {
 	color: crimson;
+	text-decoration: none;
 }
 
 a:hover {
@@ -24,18 +25,17 @@ a:hover {
 /* Layout
 ------------------------------------------*/
 
-#wrapper {
-	width: 100%;
-	padding: 1em 0;
-	background: #fff;
-}
-
 header,
-#container,
+.container,
 footer {
 	margin: 0 auto;
 	width: 88%;
 	max-width: 960px;		
+}
+
+.wrapper {
+	padding: 1em 0;
+	background: #fff;
 }
 
 /* Navigation
@@ -68,7 +68,6 @@ nav ul li:hover {
 }
 
 nav ul li a {
-	text-decoration:none;
 	width:100%;
 	padding:1em 0;
 	display:block;
@@ -90,45 +89,45 @@ nav ul li a {
 
 @media screen and (min-width: 800px) {
 
-nav {
- 	border-top:1px solid #fff;
- }
+	nav {
+	 	border-top:1px solid #fff;
+	}
 
-nav ul li {
-  	float:left;
-  	width:19.8%;
-  	border-right:1px solid #fff;
-  	border-top:none;
-  	text-align:center;
-  	padding:0;
-  }
+	nav ul li {
+	  	float:left;
+	  	width:19.8%;
+	  	border-right:1px solid #fff;
+	  	border-top:none;
+	  	text-align:center;
+	  	padding:0;
+	}
 
-nav ul li:nth-child(1) {
-  	border-left:1px solid #fff;
-  }
+	nav ul li:nth-child(1) {
+	  	border-left:1px solid #fff;
+	}
 
- nav ul li ul {
-	padding:0;
-    position: absolute;
+	 nav ul li ul {
+		padding:0;
+	    position: absolute;
 
-    width: 19.8%;
-    max-width:190px;
-    left: -999em;
-    float: left;
-  }
+	    width: 19.8%;
+	    max-width:190px;
+	    left: -999em;
+	    float: left;
+	}
 
-nav ul li ul li {
-	width: 100%;
-	padding:0;
-}
+	nav ul li ul li {
+		width: 100%;
+		padding:0;
+	}
 
-nav ul li ul li, nav ul li ul li:nth-child(1) {
-	border-right:0;
-	border-left:0;
-}
-  
-  nav ul li:hover ul {
-    left: auto;
-  }
+	nav ul li ul li, nav ul li ul li:nth-child(1) {
+		border-right:0;
+		border-left:0;
+	}
+	  
+	nav ul li:hover ul {
+	    left: auto;
+	}
 
 }
