--- a/social-media-buttons-sprites/styles.css
+++ b/social-media-buttons-sprites/styles.css
@@ -15,6 +15,7 @@ body {
 
 a {
 	color:crimson;
+	text-decoration: none;
 }
 
 a:hover {
@@ -24,22 +25,20 @@ a:hover {
 /* Layout
 ------------------------------------------*/
 
-#wrapper {
-	width: 100%;
+header,
+.container,
+footer {
+	margin: 0 auto;
+	width: 88%;
+	max-width: 960px;		
+}
+
+.wrapper {
 	padding: 1em 0;
 	background: #fff;
 }
 
-header,
-#container,
-footer {
-	margin: 0 auto;
-	width: 88%;
-	max-width: 960px;
-		
-}
-
-/* social media.
+/* Social Media.
 ------------------------------------------*/
 
 .social-channels {
