--- a/thumbnail-gallery-captions-transitions/styles.css
+++ b/thumbnail-gallery-captions-transitions/styles.css
@@ -15,28 +15,27 @@ body {
 
 a {
 	color: crimson;
+	text-decoration: none;
 }
 
-a: {
+a:hover {
 	color:red;
 }
 
 /* Page structure
 ------------------------------------------*/
 
-
-#wrapper {
-	width:100%;
-	padding:1em 0;
-	background: #fff;
-}
-
 header,
-#container,
+.container,
 footer {
 	margin: 0 auto;
 	width:88%;
 	max-width: 960px;		
+}
+
+.wrapper {
+	padding:1em 0;
+	background: #fff;
 }
 
 /* Gallery
@@ -47,7 +46,7 @@ footer {
 }
 
 .gallery li {
-	margin:0 1em 0 0;
+	margin-right: 1em;
 	list-style:none;
 	float:left;
 }
