--- a/thumbnail-gallery-captions/styles.css
+++ b/thumbnail-gallery-captions/styles.css
@@ -15,6 +15,7 @@ body {
 
 a {
 	color: crimson;
+	text-deocration: none;
 }
 
 a:hover {
@@ -24,19 +25,18 @@ a:hover {
 /* Layout
 ------------------------------------------*/
 
-#wrapper {
-	width: 100%;
-	padding: 1em 0;
-	background: #fff;
-}
-
 header,
-#container,
+.container,
 footer {
 	margin: 0 auto;
 	width: 88%;
 	max-width: 960px;
-		
+}
+
+.wrapper {
+	width: 100%;
+	padding: 1em 0;
+	background: #fff;
 }
 
 /* Gallery
@@ -47,7 +47,7 @@ footer {
 }
 
 .gallery li {
-	margin:0 1em 0 0;
+	margin-right: 1em;
 	list-style:none;
 	float:left;
 }
