--- a/typography/styles.css
+++ b/typography/styles.css
@@ -25,22 +25,20 @@ a:hover {
 /* Page structure
 ------------------------------------------*/
 
-
-#wrapper {
-	width:100%;
-	padding:1em 0;
-	background: url("images/handmadepaper.png");
-}
-
 header,
-#container,
+.container,
 footer {
 	margin: 0 auto;
 	width:88%;
 	max-width: 960px;
 }
 
-#container {
+.wrapper {
+	padding:1em 0;
+	background: url("images/handmadepaper.png");
+}
+
+.container {
 	background: rgba(250,250,250,0.5);
 	box-shadow: 3px 3px 3px rgba(0,0,0,0.3);
 	border-radius: 12px;
