--- a/pattern-overlay/styles.css
+++ b/pattern-overlay/styles.css
@@ -1,12 +1,55 @@
+/*
+
+Title: Stylesheet Template
+
+Author: Maurice van Cooten
+
+*/
+
+body {
+	background: #eeeeee;
+	font-size: 16px;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	margin:0;
+}
+
+a {
+	color:crimson;
+	text-decoration:none;
+}
+
+a:hover {
+	color:red;
+}
+
+/* Layout
+------------------------------------------*/
+
+header,
+.container,
+footer {
+	margin: 0 auto;
+	width:88%;
+	max-width: 960px;
+}
+
+.wrapper {
+	padding:1em 0;
+	background: #ffffff;	
+}
+
+/* Image overlay
+------------------------------------------*/
+
 .overlay {
-    background:url(images/sunflower.jpg) no-repeat;
+    background:url(images/cosmic-thing.jpg) no-repeat;
     background-size:cover;
     width:800px;
-    height:536px;
+    height:600px;
 }
 
 .overlay span {
-    background:url(images/pattern-2.png);
+    background:url(images/pattern.png);
     width:100%;
     height:100%;
     display:block;
