--- a/filters/styles.css
+++ b/filters/styles.css
@@ -1,5 +1,45 @@
+/*
+
+Title: Stylesheet Template
+
+Author: Maurice van Cooten
+
+*/
+
+body {
+    background: #eeeeee;
+    font-size: 16px;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    margin:0;
+}
+
+a {
+    color:crimson;
+    text-decoration:none;
+}
+
+a:hover {
+    color:red;
+}
+
+/* Layout
+------------------------------------------*/
+
+header,
+.container,
+footer {
+    margin: 0 auto;
+    width:88%;
+    max-width: 960px;
+}
+
+.wrapper {
+    padding:1em 0;
+    background: #ffffff;    
+}
+
 /* Filters
-------------------------*/
+------------------------------------------*/
 
 .grayscale {
     -webkit-filter: grayscale(100%);
@@ -36,16 +76,3 @@
     filter: sepia(0);
 
 }
-
-.invert {
- -webkit-filter: invert(.8);
-  filter: invert(.8);
-}
-
-
-
-
-
-
-
-
