--- a/thumbnail-gallery-captions/styles.css
+++ b/thumbnail-gallery-captions/styles.css
@@ -7,7 +7,7 @@ Author: Maurice van Cooten
 */
 
 body {
-	background: #eee;
+	background: #eeeeee;
 	font-size: 16px;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	margin:0;
@@ -36,7 +36,7 @@ footer {
 .wrapper {
 	width: 100%;
 	padding: 1em 0;
-	background: #fff;
+	background: #ffffff;
 }
 
 /* Gallery
@@ -44,12 +44,14 @@ footer {
 
 .gallery {
 	padding:0;
+	list-style:none;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
 }
 
 .gallery li {
 	margin-right: 1em;
-	list-style:none;
-	float:left;
 }
 
 .gallery img {
@@ -60,28 +62,16 @@ footer {
 	border: 6px solid pink;
 }
 
-.gallery li div.item {
+.gallery li .item {
 	position:relative;
-	text-align:center;
 }
 
-.gallery li div.item span {
-	text-align:center;
+.gallery li .item span {
 	position:absolute;
-	background:rgba(250,250,250,0.8);
-	padding:.7em 0 1.2em 0;
 	bottom:0;
 	left:0;
+	text-align:center;
 	width:100%;
-}
-
-/* misc.
-------------------------------------------*/
-
-.clearfix:after {
-	content:".";
-	display:block;
-	height: 0;
-	clear:both;
-	visibility:hidden;
+	background:rgba(250,250,250,0.8);
+	padding:.7em 0 1.2em 0;
 }
