--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -7,20 +7,21 @@ Author: Maurice van Cooten
 */
 
 body {
-	background: #eeeeee;
-	font-size: 16px;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	margin:0;
+  background: #eeeeee;
+  font-size: 16px;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  margin: 0;
 }
 
 a {
-	color:crimson;
-	text-decoration:none;
+  color: crimson;
+  text-decoration: none;
 }
 
 a:hover {
-	color:red;
+  color: red;
 }
+
 
 /* Layout
 ------------------------------------------*/
@@ -28,51 +29,47 @@ a:hover {
 header,
 .container,
 footer {
-	margin: 0 auto;
-	width:88%;
-	max-width: 1080px;
+  margin: 0 auto;
+  width: 88%;
+  max-width: 1080px;
 }
 
 .wrapper {
-	padding:1em 0;
-	background: #ffffff;
-	
+  padding: 1em 0;
+  background: #ffffff;
 }
 
 img {
-	max-width:100%;
+  max-width: 100%;
 }
+
 
 /* FlexBox  Gallery
 ------------------------------------------*/
 
-img {
-	display:block;
-}
-
-ul {
-	padding:0;
-	list-style:none;
-	background:pink;
+.gallery,
+.gallery-2,
+.gallery-3,
+.gallery-4 {
+  background: pink;
 }
 
 .gallery {
-	display:flex;
-	justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .gallery-2 {
-	display:flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .gallery-3 {
-	display:flex;
-	justify-content: space-between;
-	
+  display: flex;
+  justify-content: space-between;
 }
 
 .gallery-4 {
-	display:flex;
-	justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
