--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -1,11 +1,3 @@
-/*
-
-Title: Stylesheet Template
-
-Author: Maurice van Cooten
-
-*/
-
 body {
   background: #eeeeee;
   font-size: 16px;
@@ -52,24 +44,32 @@ img {
 .gallery-3,
 .gallery-4 {
   background: pink;
+  display: flex;
+}
+
+.gallery img,
+.gallery-2 img,
+.gallery-3 img,
+.gallery-4 img {
+  display: block;
 }
 
 .gallery {
-  display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
 }
 
 .gallery-2 {
-  display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .gallery-3 {
-  display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .gallery-4 {
-  display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
